--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -180,7 +180,10 @@ form {
 
 input {
     width: 20rem;
+    height: 2rem;
+    font-size: 1.2rem;
 }
+
 
 button {
     width: 10rem;
@@ -231,6 +234,8 @@ select {
         
         input {
             width: 9rem;
+            height: 1.8rem;
+            font-size: 1.08rem;
         }
         button {
             width: 6rem;
