--- a/asset/css/authentification.css
+++ b/asset/css/authentification.css
@@ -52,8 +52,8 @@ main{
 .form_container{
     height: 40%;
     width: 35%;
-    border: 3px solid black;
-    border-radius: 30px;
+    border: 2px solid black;
+    
     padding: 10px;
     display: flex;
     justify-content: center;
@@ -61,9 +61,11 @@ main{
     flex-direction: column;
     gap: 50px;
     position: absolute;
-    left: 0px;
-    top: 150px;
-    margin-left: 5px;
+    left: 4px;
+    top: 250px;
+    padding-top: 150px;
+    padding-bottom: 200px;
+   
 
 }
 
@@ -91,8 +93,9 @@ main{
 
 .test {
     padding-left: 50%;
-    width: 65%;
-    height: 104%;
+    width: 78%;
+    height: 102%;
+    margin-bottom:17px ;
 }
  
 
