--- a/asset/css/contact.css
+++ b/asset/css/contact.css
@@ -105,8 +105,7 @@ h1 {
     font-family: "baloo2";
     font-weight: 500;
     font-size: 2rem;       
-   
-}
+   }
 
 .contact {
     text-align: center;
@@ -151,13 +150,16 @@ h1 {
     padding: 0 1.25rem;
 } 
  
-#subjet, #subjet-selected, #message, #submit {
+.subject, #subjet-selected, #message, #submit {
     display: block;
 }
 
-.subject {
+.subject, #subjet-select {
     background-color: #b1f3bc;
+    height: 2rem;
+    width: 30rem;
     margin-right: 62%;
+    padding-bottom: 2%;
 }
 
 #message {
@@ -165,8 +167,14 @@ h1 {
     margin-bottom: 1%;
 }
 
-.button {
-    width: 0.188rem;
+input {
+    height: 2rem;
+    width: 30rem;
+    margin-bottom: 0.5%;
+}
+
+button {
+    width: 5rem;
     background-color: #E2FBB7;    
 }
 
@@ -177,7 +185,8 @@ h1 {
     padding: 1.875rem 1.25rem 1.875rem 1.25rem;
     text-shadow: #F0F8FF 0.5px 0.5px, #F0F8FF -0.5px 0.5px, #F0F8FF -0.5px -0.5px, #F0F8FF 0.5px -0.5px;
    
-    .social-networks {background-color: #b1f3bc; 
+    .social-networks {
+        background-color: #b1f3bc; 
         font-size: 1.25rem;
         margin-bottom: 1%;
     }
@@ -189,13 +198,45 @@ h1 {
 }
 
 @media screen AND (max-width: 768px) {
-   .phone-numbers, .other-request, .form, .subject, .message,.find-us, .maps {
+    .phone-numbers, .other-request, .form, .subject, .message,.find-us, .maps {
         display: flex;
         flex-direction: column;
-        justify-content: flex-start;        
-    }      
+        justify-content: flex-start;       
+    } 
 
+    .wallpaper {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    input {
+        height: 1rem;
+        width: 10rem;
+    }
+
+    .subject, #subjet-select {
+        height: 1rem;
+        width: 10rem;
+        padding-bottom: 2%;
+    }
+
+    /*à corriger*/
+    .message {
+        box-sizing: border-box;
+        height: 1rem;
+        width: 10rem;
+    }
+
+    /* idem message ?*/
+    .maps {}
+
+    .fields {
+        height: 1rem;
+        width: 10rem;
+    }
 }   
+
+
    
 /*footer commun*/
 
