--- a/asset/css/login.css
+++ b/asset/css/login.css
@@ -78,7 +78,66 @@ header {
 
 }
 
+/*style qui s'applique à la partie main*/
 
+
+
+main{
+    height:100vh;
+    width:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form_container{
+    height: 40%;
+    width: 35%;
+    border: 2px solid black;
+    
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 50px;
+    position: absolute;
+    left: 4px;
+    top: 250px;
+    padding-top: 150px;
+    padding-bottom: 200px;
+   
+
+}
+
+.form_container_heading{
+    font-size: 1.2rem;
+    font-family:sans-serif;
+    color: #B1F3BC;
+}
+
+
+
+.form_container_inputs,.form_container_button {
+    padding: 15px;
+    width: 80%;
+    border-radius: 10px;
+    border: 2px solid black;
+    outline:none;
+}
+.form_container_button{
+    width: 85%;
+    background-color: #B1F3BC;
+    color: #fff;
+
+}
+
+.test {
+    padding-left: 50%;
+    width: 78%;
+    height: 102%;
+    margin-bottom:17px ;
+}
 
 
 
