--- a/asset/css/estimate.css
+++ b/asset/css/estimate.css
@@ -257,6 +257,11 @@ h3 {
     font-size: 1.5rem;
 }
 
+.info h3:hover {
+    text-decoration: underline;
+}
+
+
 /***********CASE D'ESTIMATION*********/
 
 .estimer {
