--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -578,10 +578,12 @@ i[class="fa-solid fa-bed"] {
 }
 
 /*menu burger*/
-.menu_burger {
-    display: flex;
-    justify-content: flex-start;
+#menu_burger {
+    position: absolute;
+    right: 2%;
     display: none;
+    cursor: pointer;
+    
 }
 
 /*-----------------------------------------------------------------------*/
@@ -589,28 +591,8 @@ i[class="fa-solid fa-bed"] {
 /*----------------------------------------------*/
 @media screen and (max-width: 480px) {
 
-    /*header : logo et menu*/
-    nav ul li {
-        display: none;
-        }
-
-    .auth {
-        display: none;
-    }
-
-    .menu_burger {
-        display: block;
-        position: relative;
-        top: 38px;
-        right: 10px;
-    }
-
     header {
         padding-bottom: 0;
-    }
-
-    .fa-bars {
-        font-size: 2rem;
     }
 
     .logo {
@@ -766,33 +748,20 @@ i[class="fa-solid fa-bed"] {
     footer {
         padding-left: 0.2rem !important;
     }
+
+    
+
 }
 
 /*------------------------------------------*/
 @media screen and (max-width: 576px) {
 
-    /*header : logo et menu*/
-    nav ul li {
-        display: none;
-        }
-
     .auth {
         display: none;
     }
 
-    .menu_burger {
-        display: block;
-        position: relative;
-        top: 38px;
-        right: 10px;
-    }
-
     header {
         padding-bottom: 0;
-    }
-
-    .fa-bars {
-        font-size: 2rem;
     }
 
     /*bannière avec fonction recherche*/
@@ -965,29 +934,13 @@ i[class="fa-solid fa-bed"] {
 /*--------------------------------------------*/
 
 @media screen and (max-width: 768px) {
-   
-    /*header : logo et menu*/
-    nav ul li {
-        display: none;
-        }
 
     .auth {
         display: none;
     }
 
-    .menu_burger {
-        display: block;
-        position: relative;
-        top: 38px;
-        right: 10px;
-    }
-
     header {
         padding-bottom: 0;
-    }
-
-    .fa-bars {
-        font-size: 2rem;
     }
 
     /*bannière avec fonction recherche*/
@@ -1148,6 +1101,65 @@ i[class="fa-solid fa-bed"] {
 
     .column4 li span {
         font-size: 0.9rem;
+    }
+
+    /*burger menu*/
+    #menu_burger {
+        display: block;
+        margin-right: 0.5rem;
+        padding-top: 1.5rem;
+        font-size: 2.5rem;
+    }
+
+    #menu_burger:before {
+        font-family: 'Font Awesome 5 Free';
+        content: "\f0c9";
+        font-weight: 900;
+    }
+
+   .active #menu_burger:before {
+        font-family: 'Font Awesome 5 Free';
+        content: "\f00d";
+        font-weight: 900;
+    }
+
+
+    nav ul {
+        flex-direction: column;
+        margin-left: 0;
+        position: fixed;
+        left: -100%;
+        right: 0;
+        top: 2.9rem;
+        background:#ccffd5;
+        width: 100%;
+        text-align: right;
+        z-index: 10;
+        transition: 0.3s;
+        border-bottom: 1px solid #1f1f1f;
+        opacity: 0.9;
+    }
+
+    nav li {
+        margin-left: 0 !important;
+        border-top: 1px solid #1f1f1f;
+    }
+
+    nav li a {
+        padding-right: 0.7rem;
+    }
+
+    nav li:hover, nav li:active {
+        background-color:#e2fbb7;
+        margin-left: 0;
+    }
+
+    nav li a:hover, nav li a:active {
+        font-weight: inherit;
+    }
+
+    nav.active ul {
+        left: 0;
     }
 
 }
