--- a/asset/css/sell.css
+++ b/asset/css/sell.css
@@ -8,6 +8,7 @@
     --border-radius: 25px;
     --margin-left-document: 50px;
     --space-element-gap: 35px;
+    --padd-header: 0.675rem;
 }
 
 
@@ -88,13 +89,17 @@ button, a {
     opacity: 50%;
 }
 
+[hidden] {
+    display: none;
+}
+
 
 /*********** Header ***********/
 
 header {
     background-color: var(--main-color);
     font-family: baloo2;
-    padding: 0.675rem;
+    padding: var(--padd-header);
     font-size: 1.4rem;
 }
 
@@ -113,20 +118,56 @@ header {
 #check, .checkbtn {
     display: none;
     cursor: pointer;
+    color: black;
+}
+
+.stop-overflow {
+    overflow: hidden;
 }
 
 @media all and (max-width: 768px) {
     
-    .checkbtn {
+    .checkbtn { 
         display: block;
         font-size: 30px;
         padding-right: 0.675rem;
-        color: black;
         float: right;
     }
 
     .menu, .logo-mon-compte {
-        display: none!important;
+        position: fixed;
+        display: block;
+        width: 100%;
+        height: 100vh;
+        left: -100%;
+        text-align: center;
+        z-index: 1;
+        background: var(--main-color);
+        touch-action: none;
+    }
+
+    .menu {
+        top: 5rem;
+    }
+
+    .logo-mon-compte {
+        top: 18rem;
+    }
+
+    .menu li {
+        width: 100%;
+    }
+
+    .menu li:first-child {
+        padding-top: 2rem;
+    }
+
+    .active {
+        left: 0;
+    }
+
+    .menu, .active, #menu-opener, #menu-closer, .logo-mon-compte {
+        transition: .4s;
     }
 
 }
