--- a/asset/css/login.css
+++ b/asset/css/login.css
@@ -80,63 +80,12 @@ header {
 
 /*style qui s'applique à la partie main*/
 
-
-
-main{
-    height:100vh;
-    width:100%;
+body{
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.form_container{
-    height: 40%;
-    width: 35%;
-    border: 2px solid black;
-    
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 50px;
-    position: absolute;
-    left: 4px;
-    top: 250px;
-    padding-top: 150px;
-    padding-bottom: 200px;
-   
-
-}
-
-.form_container_heading{
-    font-size: 1.2rem;
-    font-family:sans-serif;
-    color: #B1F3BC;
-}
-
-
-
-.form_container_inputs,.form_container_button {
-    padding: 15px;
-    width: 80%;
-    border-radius: 10px;
-    border: 2px solid black;
-    outline:none;
-}
-.form_container_button{
-    width: 85%;
-    background-color: #B1F3BC;
-    color: #fff;
-
-}
-
-.test {
-    padding-left: 50%;
-    width: 78%;
-    height: 102%;
-    margin-bottom:17px ;
+    height: 100%;
+    background-image: linear-gradient(#B1F3BC);
 }
 
 
@@ -157,163 +106,3 @@ main{
 
 
 
-/************** FOOTER ******************   */
-
-footer {
-    background-color: #1f1f1f;
-    font-family: "opensans";
-    padding-top: 0.675rem;
-}
-
-.social-media {
-    color: var(--third-color);
-    display: flex;
-    flex-direction: row;
-    font-size: 1.5rem;
-    padding-left: 38px;
-}
-
-.social-media li {
-    padding: 20px;
-}
-
-footer p, footer h2, .footer-queries a {
-    color: var(--third-color);
-}
-
-.colonne {
-    display: flex;
-    padding-top: 0.675rem;
-}
-
-footer ul {
-    flex-flow: column;
-}
-
-footer li {
-    list-style: none;
-    padding-bottom: 1rem;
-}
-
-.footer-services, .footer-access, .footer-contact {
-    display: flex;
-    flex-direction: column;
-    padding-left: 8.95rem;
-}
-
-
-.copyright {
-    padding-bottom: 0.675rem;
-    text-align: center;
-}
-
-.footer-logo img {
-    width: 150px;
-    height: 73px;
-}
-
-.footer-logo {
-    padding: 0.675rem;
-    padding-top: 0;
-}
-
-footer p {
-padding-left: 9px;
-padding-top: 2rem;
-}
-
-#fb:hover, #tw:hover, #insta:hover {
-    transform: scale(2);
-    cursor: pointer;
-}
-
-footer h2 {
-    padding-bottom: 10px;
-}
-
-footer li a:hover {
-    text-decoration: underline;
-}
-
-.footer-queries {
-    display: flex;
-    justify-content: space-around;
-}
-
-@media all and (max-width: 1200px) {
-    .colonne {
-        flex-direction: column;
-    }
-
-    .footer-access, .footer-services, .footer-contact {
-        width: 33.33%;
-    }
-
-}
-
-@media all and (max-width: 992px) {
-    .footer-access, .footer-services, .footer-contact {
-        padding-left: 1.5rem;
-    }
-    .social-media {
-        padding-left: 0rem;
-    }
-    .footer-access, .footer-services, .footer-contact {
-        width: 20%;
-    } 
-}
-
-@media all and (max-width: 768px) {
-    .footer-access, .footer-services, .footer-contact {
-        padding-left: 1.5rem;
-        width: max-content;
-    }
-}
-
-@media all and (max-width: 576px) {
-    .colonne {
-        flex-direction: column;
-    }
-    .footer-access, .footer-services, .footer-contact {
-        padding: 0.675rem;
-        padding-left: 1rem;
-    }
-
-    .logo {
-        padding-left: 12.5rem;
-    }
-
-    .footer-logo p {
-        padding-left: 8.5rem;
-    }
-
-    .social-media {
-        font-size: 3.5rem;
-        padding-left: 0rem;
-        justify-content: space-around;
-    }
-
-    .social-media li {
-        padding: 1rem 8.6rem 1rem 0rem;
-    }
-
-    .footer-queries {
-        flex-direction: column;
-    }
-
-    .social-media li:last-child {
-        padding-right: 0;
-    }
-}
-
-@media all and (max-width: 460px) {
-
-    .logo {
-        padding-left: 6.5rem;
-    }
-
-    .social-media li {
-        padding-right: 4rem;
-    }
-
-}
