--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -196,7 +196,7 @@ input {
 }
 
 
-button {
+.butt {
     width: 10rem;
     margin: 0rem 0rem 0.675rem 0rem;
     background-color: #E2FBB7;
@@ -224,7 +224,7 @@ select {
         input {
             width: 20rem;
         }
-        button {
+        .butt {
             width: 10rem;
         }
 
@@ -239,7 +239,7 @@ select {
         input {
             width: 15rem;
         }
-        button {
+        .butt {
             width: 8rem;
         }
 
@@ -257,7 +257,7 @@ select {
             height: 1.8rem;
             font-size: 1.08rem;
         }
-        button {
+        .butt {
             width: 6rem;
         }
 
@@ -298,7 +298,7 @@ select {
             width: 10rem;
             margin-bottom: 0.675rem;
         }
-        button {
+        .butt {
             width: 6rem;
             margin: 0rem 0.5rem 0rem 0.5rem;
         }
