--- a/asset/css/login.css
+++ b/asset/css/login.css
@@ -1,101 +1,70 @@
-@font-face {
-    font-family: "baloo2";
-    src: url(../fonts-family/Baloo2-Medium.ttf);
-}
-@font-face {
-    font-family: "opensans";
-    src: url(../fonts-family/OpenSans/OpenSans-Regular.ttf);
-}
-:root {
-    --main-color: #b1f3bc;
-    --third-color: white;
-}
-
-* {
-    padding: 0;
+*{
+    padding:0;
     margin: 0;
-    color: inherit;
+    font-family:sans-serif ;
+    box-sizing: border-box ;
 }
-
-a {
-    text-decoration: none;
-}
-
-.logo:hover {
-    opacity: 0.6;
-}
-
-.title-txt {
-    font-family: "Baloo2", sans-serif;
-    font-size: 1.4rem;
-}
-.flex {
-    display: flex;
-}
-
-.justify-content{
-    justify-content: space-between;
-}
-
-.align-item{
-    align-items: center;
-}
-
-.menu li {
-    list-style: none;
-    margin: 0 40px 0 0;
-}
-
-.menu a:hover, .logo-mon-compte:hover {
-    font-weight: bolder;
-}
-
-header {
-    background-color: var(--main-color);
-    font-family: baloo2;
-    font-size: 1.4rem;
-    padding: 0.675rem;
-}
-
-#check, .checkbtn {
-    display: none;
-    cursor: pointer;
-}
-
-@media all and (max-width: 768px) {
-    
-    .checkbtn {
-        display: block;
-        font-size: 30px;
-        padding-right: 0.675rem;
-        color: black;
-        float: right;
-    }
-
-    .menu, .logo-mon-compte, header nav {
-        display: none!important;
-    }
-
-}
-
-/*style qui s'applique à la partie main*/
 
 body{
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 100%;
-    background-image: linear-gradient(#B1F3BC);
+    align-items:center ;
+    height:100vh ;
+    background-image: linear-gradient( green , white);
 }
 
+.container{
+    max-width:650px ;
+    padding:28px;
+    margin:0  28px;
+    border-radius: 10px;
+    overflow: hidden;
+    background: black rgba(0,0,0,0,2);
+    box-shadow:0 15px 20px  rgba(0,0,0,0,6);
+}
 
+h2{
+    font-size:26px;
+    font-weight:bold;
+    text-align:left ;
+    color: #fff;
+    padding-bottom:1px solid red;
+}
+.content{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding:20px o;
+}
+.input-box{
+    display: flex;
+    flex-wrap:wrap;
+    width:50%;
+    padding-bottom: 15px;
+}
+.input-box:nth-child(2n){
+    justify-content:end;
+}
+.input-box label, .gender-title{
+    width:95%;
+    color: #fff;
+    font-weight: bold;
+    margin: 5px 0;
+}
+.gender-title{
+    font-size: 16px;
+}
+.input-box input{
+    height: 40px;
+    width: 95%;
+    padding: 0 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    outline: none;
 
+}
 
-
-
-
-
-
+    
 
 
 
