--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -214,6 +214,7 @@ input {
 
 select {
     text-align: center;
+    font-size: medium;
     width: 10rem;
     margin: 0rem 0rem 0.675rem 0rem;
     background-color: #E2FBB7;
