--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -58,6 +58,7 @@ h1, h2, h3, h4 {
 
 h1 {
     text-align: center;
+    font-size: 3rem;
 }
 
 p {
@@ -370,6 +371,9 @@ select {
             right: 3%;
             top: 8.8rem;
         }
+        h1 {
+            font-size: 2.5rem;
+        }
     }
 
     @media all AND (max-width:460px)
@@ -378,7 +382,10 @@ select {
             left: 0%;
             right: 0%;
             top: 6.3rem;
-        }  
+        }
+        h1 {
+            font-size: 2rem;
+        }
     }
 
     @media all AND (max-width:320px)
@@ -387,7 +394,10 @@ select {
             left: 0%;
             right: 0%;
             top: 6.5rem;
-        }  
+        }
+        h1 {
+            font-size: 1.8rem;
+        }
     }
 
 
