--- a/asset/css/contact.css
+++ b/asset/css/contact.css
@@ -214,7 +214,7 @@ button {
     .other-request{
         display: flex;
         flex-direction: column;
-        width: 30rem;
+        width: 35rem;
     }    
 
     .wallpaper {
@@ -229,14 +229,15 @@ button {
 
     .subject, #subject-select {
         height: 2rem;
-        width: 10rem;
+        width: 16rem;
+        margin-top: 1%;
         padding-top: 1%;
-        padding-bottom: 2%;
+        padding-bottom: 1%;
     }
 
     #message {
         box-sizing: content-box;
-        margin-top: 10%;    
+        margin-top: 5%;    
         height:15rem ;
         width: 16rem ;          
     }
@@ -244,6 +245,10 @@ button {
     .maps iframe {
         height: 17rem;
         width: 17rem;
+    }
+
+    .find-us {
+        width: 25rem;
     }
 
     .fields {
