--- a/asset/css/login.css
+++ b/asset/css/login.css
@@ -152,18 +152,19 @@ h2{
     outline: none;
 }
 .test {
-    width: 88%;
+    width: 100%;
     height: 100%;
-    margin-bottom:15px ;
-    margin-left: 38%;
-}
-.image {
-    width: 66%;
-    height: 100%;
+    
 }
 
 
+.parent{
+    display: flex;
+}
 
+form{
+    margin-top: 3rem;
+}
 
 
 
