--- a/asset/css/offers.css
+++ b/asset/css/offers.css
@@ -68,7 +68,7 @@ header {
         color: #6F86FF;
     }
     
-    body {
+    body .off-screen-menu {
         font-family: sans-serif;
     }
     
